--- a/conteo_inventario.html
+++ b/conteo_inventario.html
@@ -505,7 +505,7 @@
                         </tr>
                     </thead>
                     <tbody id="tablaCaptura">
-                        <tr>
+                        <tr class="placeholder-empty">
                             <td colspan="7" class="text-center py-10 text-gray-400 italic text-sm">
                                 Presiona "Agregar Producto" para iniciar la captura
                             </td>
